test/neg/neg-future2.errc
request the UPC.. library return an object by-value that has a large static type
